--- a/agenda/src/pages/contactos/contactos.html
+++ b/agenda/src/pages/contactos/contactos.html
@@ -23,5 +23,14 @@
 </ion-header>
 
 <ion-content padding>
+    
+  <ion-list>
+    <button ion-item *ngFor="let contact of contacts" (click)="onItemTapped($event, contact)">
+      <p><strong>Nombre: </strong>{{contact.nombre}}</p>     
+      <p><strong>Organización: </strong>{{contact.organizacion}}</p>    
+      <p><strong>Móvil: </strong>{{contact.numero}}</p>    
+      <p><strong>Correo: </strong>{{contact.correo}}</p>
+    </button>
+  </ion-list>
 
 </ion-content>
