--- a/agenda/src/pages/login/login.html
+++ b/agenda/src/pages/login/login.html
@@ -4,12 +4,11 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-
 <ion-header>
-  <ion-navbar>
-    <ion-title>Login</ion-title>
-  </ion-navbar>
-</ion-header>
+    <ion-navbar >
+      <ion-title>Login</ion-title>
+    </ion-navbar>
+  </ion-header>
 
 <ion-content>
 
@@ -27,7 +26,8 @@
     </ion-list>
 
     <div padding>
-      <button ion-button color="primary" block>Sign In</button>
+      <button ion-button color="primary" block (click)="login()">Sign In</button>
+      <button ion-button color="secondary" block (click)="register()">Register</button>
     </div>
 
 </ion-content>
