--- a/agenda/src/pages/nueva-tarea/nueva-tarea.html
+++ b/agenda/src/pages/nueva-tarea/nueva-tarea.html
@@ -15,22 +15,22 @@
     <ion-list> 
     
       <ion-item>
-        <ion-label fixed>Tarea</ion-label>
+        <ion-label floating>Tarea</ion-label>
         <ion-input type="text"></ion-input> 
       </ion-item>  
 
       <ion-item> 
-        <ion-label fixed>Fecha</ion-label> 
+        <ion-label floating>Fecha</ion-label> 
         <ion-input type="text"></ion-input>
       </ion-item>
   
       <ion-item>    
-        <ion-label fixed>Lugar</ion-label>    
+        <ion-label floating>Lugar</ion-label>    
         <ion-input type="text"></ion-input>     
       </ion-item>
    
       <ion-item>  
-        <ion-label fixed>Prioridad</ion-label>      
+        <ion-label floating>Prioridad</ion-label>      
         <ion-input type="text"></ion-input>    
       </ion-item>
 
