Inicio de sesión con Firebase

--- a/agenda/src/pages/acerca-de/acerca-de.html
+++ b/agenda/src/pages/acerca-de/acerca-de.html
@@ -18,6 +18,6 @@
   <p>Aplicación súper adictiva para llevar tu agenda. Exitosa a nivel internacional</p>
 
   <h2>Sobre el desarrollador</h2>
-  <p>Grupo de desarrollo de alto prestigio, reconocidos mundialmente por ser los creadores de "Cibo"</p>
+  <p>Grupo de desarrollo de alto prestigio, reconocidos mundialmente por ser los creados de "Cibo"</p>
 
 </ion-content>
