--- a/agenda/src/pages/nueva-tarea/nueva-tarea.html
+++ b/agenda/src/pages/nueva-tarea/nueva-tarea.html
@@ -12,33 +12,36 @@
 
 
 <ion-content padding>
-    <ion-list> 
-    
-      <ion-item>
-        <ion-label floating>Tarea</ion-label>
-        <ion-input type="text"></ion-input> 
-      </ion-item>  
+    <form (ngSubmit)="tareaCreada(f.value)" #f="ngForm">
 
-      <ion-item> 
-        <ion-label floating>Fecha</ion-label> 
-        <ion-input type="text"></ion-input>
-      </ion-item>
+        <ion-list>
   
-      <ion-item>    
-        <ion-label floating>Lugar</ion-label>    
-        <ion-input type="text"></ion-input>     
-      </ion-item>
-   
-      <ion-item>  
-        <ion-label floating>Prioridad</ion-label>      
-        <ion-input type="text"></ion-input>    
-      </ion-item>
+            <ion-item>
+              <ion-label>Nombre</ion-label>
+              <ion-input type="text" placeholder="Texto" name="tarea" ngModel required></ion-input>
+            </ion-item>
+  
+            <ion-item>
+              <ion-label>Fecha</ion-label>
+              <ion-input type="text" placeholder="Texto" name="fecha" ngModel required></ion-input>
+            </ion-item>
+  
 
-    </ion-list>
-      
-    <div padding>      
-        <button ion-button color="primary" (click)="toastTareaCreada()">Create</button>      
-        <button ion-button color="danger" (click)="cancelarTarea()">Cancel</button>     
-    </div>
+            <ion-item>
+                <ion-label>Lugar</ion-label>
+                <ion-input type="text"  name="lugar" ngModel></ion-input>
+            </ion-item>
   
+            <ion-item>
+  
+              <ion-label>Prioridad</ion-label>
+              <ion-input type="number"  name="prioridad" ngModel></ion-input>
+  
+          </ion-item>
+
+        </ion-list>
+  
+         <button ion-button block type="submit" [disabled]="!f.valid">Aceptar</button>
+
+    </form>
 </ion-content>
