--- a/agenda/src/pages/acerca-de/acerca-de.html
+++ b/agenda/src/pages/acerca-de/acerca-de.html
@@ -5,10 +5,18 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
+<!--
   <ion-navbar>
     <ion-title>Acerca De</ion-title>
   </ion-navbar>
+--> 
+
+  <ion-navbar color="primary">
+    <button ion-button menuToggle>
+    <ion-icon name="menu"></ion-icon>
+    <ion-title>Acerca De</ion-title>
+    </button>
+    </ion-navbar>
 
 </ion-header>
 
