--- a/Cibo/src/pages/home/home.html
+++ b/Cibo/src/pages/home/home.html
@@ -28,7 +28,7 @@
         
                     <img width="90" height="90" object-fit= "fill"  
                     src="../assets/imgs/Thumbsup.jpg"> 
-                    <button ion-button color="secondary" clear>Like</button>
+                    <button ion-item (click) = "likeButton()"color="secondary" clear>Like</button>
                 
                     </section>
 
