--- a/Cibo/src/pages/login/login.html
+++ b/Cibo/src/pages/login/login.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 <ion-content>
-
+  <section class = "login-container">
   <ion-list>
 
     <ion-item>
@@ -47,5 +47,5 @@
     <button ion-button color="primary" block (click)="login()">Iniciar Sesión</button>
     <button ion-button color="secondary" block (click)="register()">Registrarse</button>
   </div>
-
+  </section>
 </ion-content>
