--- a/Cibo/src/pages/login/login.html
+++ b/Cibo/src/pages/login/login.html
@@ -4,15 +4,13 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-  <ion-navbar color="primary" >
-    <ion-title>Inicio de Sesión</ion-title>
-  </ion-navbar>
-</ion-header>
 
-<ion-content>
-  <section class = "login-container">
-  <ion-list>
+
+<ion-content class = "login-container">
+
+
+  <div class= "list-container">
+  <ion-list >
 
     <ion-item>
       <ion-label floating>Correo</ion-label>
@@ -42,10 +40,12 @@
 
     </ion-item>
   </ion-list>
+  </div>
 
+  <section class="loginButton-container">
   <div padding>
     <button ion-button color="primary" block (click)="login()">Iniciar Sesión</button>
     <button ion-button color="secondary" block (click)="register()">Registrarse</button>
   </div>
-  </section>
+</section>
 </ion-content>
