--- a/Cibo/src/pages/settings/settings.html
+++ b/Cibo/src/pages/settings/settings.html
@@ -23,5 +23,9 @@
                      <ion-icon name="leaf" item-start></ion-icon>
                      Allergies and Preferences
                     </button>
+             <button logout ion-item (click)="cerrarSesion()">
+                     <ion-icon name="exit" item-start></ion-icon>
+                     Cerrar Sesión
+                     </button>
       </ion-list>
 </ion-content>
