--- a/Cibo/src/pages/register/register.html
+++ b/Cibo/src/pages/register/register.html
@@ -13,8 +13,9 @@
 </ion-header>
 
 
-<ion-content padding>
-  
+<ion-content class = "login-container">
+  <div class= "list-container">
+    
   <ion-list> 
 
     <ion-item> 
@@ -45,9 +46,10 @@
     </ion-item>
 
   </ion-list>
-
+</div>
+<section class="registerButton-container">
   <div padding>
     <button ion-button color="primary" block (click)='register()'>Register</button>
   </div>
-
+</section>
 </ion-content>
