--- a/Cibo2/src/pages/register/register.html
+++ b/Cibo2/src/pages/register/register.html
@@ -10,7 +10,7 @@
 <ion-content class = "page-login">
   <div class= "list-container">
     
-  <ion-list> 
+  <ion-list class = "center"> 
 
     <ion-item> 
       <ion-label floating>Correo</ion-label> 
