--- a/Cibo2/src/pages/tabs/tabs.html
+++ b/Cibo2/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs tabsPlacement="top" margin-top="0">
-  <ion-tab [root]="tab1Root" tabTitle="Mi Restaurante" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Mis platos" tabIcon="restaurant"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Agregar plato" tabIcon="add"></ion-tab>
+  <ion-tab [root]="tab1Root" tabIcon="settings"></ion-tab>
+  <ion-tab [root]="tab2Root" tabIcon="restaurant"></ion-tab>
+  <ion-tab [root]="tab3Root" tabIcon="star"></ion-tab>
 </ion-tabs>
+  
