Estilos de home

--- a/Cibo2/src/pages/favs/favs.html
+++ b/Cibo2/src/pages/favs/favs.html
@@ -6,13 +6,25 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>favs</ion-title>
-  </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
-
+ 
+    <ion-list>
+      <ion-list-header >Your favorite dishes!</ion-list-header>
+      <ion-item>
+        <ion-icon name="pasta" ></ion-icon>
+        Pasta
+      </ion-item>
+      <ion-item>
+        <ion-icon name="pizza" ></ion-icon>
+        Pizza
+      </ion-item>
+      <ion-item>
+        <ion-icon name="sushi" ></ion-icon>
+        Sushi
+      </ion-item>
+    </ion-list>
+  
 </ion-content>
