--- a/Cibo2/src/pages/home/home.html
+++ b/Cibo2/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-content padding>
   
   <ion-card>
-    <img src="../assets/imgs/pizza.jpg"/>
+    <img id="foto-plato"/>
   </ion-card>    
 
       
