--- a/Cibo2/src/pages/restaurant/restaurant.html
+++ b/Cibo2/src/pages/restaurant/restaurant.html
@@ -1,18 +1,26 @@
-<!--
-  Generated template for the RestaurantPage page.
+<ion-content>
+    <ion-card>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+      <img id='foto' src={{urls}}/>
 
-  <ion-navbar>
-    <ion-title>restaurant</ion-title>
-  </ion-navbar>
+      <ion-card-content>
+        <ion-card-title>Nombre</ion-card-title>
+        <p>Descrip</p>
+        <p>Calle del TAl 4545</p>
+      </ion-card-content>
 
-</ion-header>
+      <ion-item>
+        <ion-icon name='at' item-start style="color: #d03e84">
+        </ion-icon>
+        <ion-badge item-end>www.www.com</ion-badge>
+      </ion-item>
 
+      <ion-item>
+          <ion-icon name='call' item-start style="color: #55acee"></ion-icon>
+          <ion-badge item-end>5557878888</ion-badge>
+      </ion-item>  
+    </ion-card>
 
-<ion-content padding>
+    <ion-card #map id="map"></ion-card>
 
-</ion-content>
+  </ion-content>
