--- a/Cibo2/src/pages/favs/favs.html
+++ b/Cibo2/src/pages/favs/favs.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding  class="background-beige">
  
     <ion-list>
       <ion-list-header >Your favorite dishes!</ion-list-header>
