--- a/Cibo2/src/pages/home/home.html
+++ b/Cibo2/src/pages/home/home.html
@@ -1,12 +1,11 @@
-<ion-content padding>
+<ion-content padding class="background-beige">
   
     &nbsp; &nbsp;
 
   <ion-card class="position-card-home">  
       <img src="../assets/imgs/pizza.jpg" class="position-image-home" >
   </ion-card>    
-
- 
+  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
 
   <section class = "position-dislikeandlike-img-home">
        
@@ -14,7 +13,8 @@
         <img width="130" height="135" src="../assets/imgs/DISLIKE.jpg">         
    </button>
 
-   &nbsp; &nbsp; &nbsp; &nbsp;
+
+   &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
       
       <button ion-button class="position-dislikeandlike-button-home" clear>   
           <img width="130" height="135" 
