--- a/Cibo2/src/pages/settings/settings.html
+++ b/Cibo2/src/pages/settings/settings.html
@@ -3,7 +3,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="background-beige">
 
   <ion-list>
       <ion-list-header>Distance (Km)</ion-list-header>
