Datos de restaurante y platos

--- a/Cibo2/src/pages/home/home.html
+++ b/Cibo2/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-content padding class="background-beige">
   
-  <ion-card>
+  <ion-card class="position-card-home">
     <img id="foto-plato"/>
   </ion-card>    
   &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
