--- a/Cibo2/src/pages/favs/favs.html
+++ b/Cibo2/src/pages/favs/favs.html
@@ -1,30 +1,10 @@
-<!--
-  Generated template for the FavsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-</ion-header>
-
-
 <ion-content padding  class="background-beige">
  
     <ion-list>
-      <ion-list-header >Your favorite dishes!</ion-list-header>
-      <ion-item>
-        <ion-icon name="pasta" ></ion-icon>
-        Pasta
-      </ion-item>
-      <ion-item>
-        <ion-icon name="pizza" ></ion-icon>
-        Pizza
-      </ion-item>
-      <ion-item>
-        <ion-icon name="sushi" ></ion-icon>
-        Sushi
-      </ion-item>
+      <button ion-item *ngFor="let th of list" >
+        <p><strong>{{th.price}}: </strong>{{th.fotoid}}</p>     
+        
+      </button>
     </ion-list>
-  
+      
 </ion-content>
