datos de restaurantes

--- a/Cibo2/src/pages/home/home.html
+++ b/Cibo2/src/pages/home/home.html
@@ -3,22 +3,20 @@
   <ion-card class="position-card-home">
     <img id="foto-plato"/>
   </ion-card>    
+  
   &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
 
   <section class = "position-dislikeandlike-img-home">
        
-    <button ion-button class="position-dislikeandlike-button-home" clear
-    (click)="onDislike()">    
-        <img width="130" height="135" src="../assets/imgs/DISLIKE.jpg">         
+    <button ion-button class="position-dislikeandlike-button-home" (click)="onDislike()" clear>    
+        <img width="130" height="135" src="../assets/imgs/DISLIKE.jpg"/>         
    </button>
 
 
    &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
       
-      <button ion-button class="position-dislikeandlike-button-home" clear 
-      (click)="onLike()">   
-          <img width="130" height="135" 
-          src="../assets/imgs/Thumbsup.jpg" >     
+      <button ion-button class="position-dislikeandlike-button-home" clear s(click)="onLike()">   
+          <img width="130" height="135" src="../assets/imgs/Thumbsup.jpg"/>     
       </button>
   </section>
 
