--- a/Cibo2/src/pages/restaurant/restaurant.html
+++ b/Cibo2/src/pages/restaurant/restaurant.html
@@ -20,4 +20,6 @@
           <ion-badge item-end>{{rest.telefono}}</ion-badge>
       </ion-item>  
     </ion-card>
+
+    <ion-card #map id="map"></ion-card>
 </ion-content>
