--- a/Cibo2/src/pages/restaurant/restaurant.html
+++ b/Cibo2/src/pages/restaurant/restaurant.html
@@ -4,20 +4,20 @@
       <img id='foto-restaurante'/>
 
       <ion-card-content>
-        <ion-card-title>{{rest.nombre}}</ion-card-title>
-        <p>{{rest.descripcion}}</p>
-        <p>{{rest.direccion}}</p>
+        <ion-card-title>{{rest2.nombre}}</ion-card-title>
+        <p>{{rest2.descripcion}}</p>
+        <p>{{rest2.direccion}}</p>
       </ion-card-content>
 
       <ion-item>
         <ion-icon name='at' item-start style="color: #d03e84">
         </ion-icon>
-        <ion-badge item-end>{{rest.sitioweb}}</ion-badge>
+        <ion-badge item-end>{{rest2.sitioweb}}</ion-badge>
       </ion-item>
 
       <ion-item>
           <ion-icon name='call' item-start style="color: #55acee"></ion-icon>
-          <ion-badge item-end>{{rest.telefono}}</ion-badge>
+          <ion-badge item-end>{{rest2.telefono}}</ion-badge>
       </ion-item>  
     </ion-card>
 
